@@ -352,9 +352,12 @@ DBUser=root
 #	To prevent housekeeper from being overloaded, no more than 4xHousekeepingFrequency hours
 #	of outdated history are deleted in one housekeeping cycle.
 #	To lower load on proxy startup housekeeping is postponed for 30 minutes after proxy start.
+#	With HousekeepingFrequency=0 the housekeeper can be only executed using the runtime control option.
+#	In this case the period of outdated history deleted in one housekeeping cycle is 4 times the
+#	period since the last housekeeping cycle, but not less than 4 hours and not greater than 4 days.
 #
 # Mandatory: no
-# Range: 1-24
+# Range: 0-24
 # Default:
 # HousekeepingFrequency=1
 
