@@ -73,7 +73,10 @@ void		collect_selfmon_stats(void);
 void		get_selfmon_stats(unsigned char process_type, unsigned char aggr_func, int process_num,
 			unsigned char state, double *value);
 void		zbx_sleep_loop(int sleeptime);
+void		zbx_sleep_forever(void);
 void		zbx_wakeup(void);
+int		zbx_sleep_get_remainder(void);
+void		zbx_set_sigusr_handler(void (*handler)(int flags));
 #endif
 
 #endif	/* ZABBIX_ZBXSELF_H */
